2.0.0
*** v1 favorites, routes will NOT work. NOT backwards compatible with v1
- revisit, refactor and rewrite v1 code where necessary
- remove xbmcswift dependency
- remove api portion in favor of new module script.module.python.twitch (based on python-twitch by ingwinlu)
- use ssl (script.module.python.twitch handles this with requests)
- api calls are cached, cache can be set/cleared from settings
- menu and setting layouts updated
- more search options
- 'refresh' from context menus
- 'go to' channel videos(display name) from context menu for streams
- 'go to' game from context menu for streams and videos
- uniform pagination where possible, 'items per page' can be changed in settings
- remove Teams, end-points no longer available
- Kodi 17 ready, content/media types set per new official repository requirements
1.4.4
- HTTPS fix for Linux users + Kodi Offical repository compatibility fixes.
1.4.3
- various fixes to coincide with issues caused by evolving Twitch API
1.4.2
- Fixed incorrect default oauth value in settings
1.4.1
- Changes/updates to API calls in line with changes made by Twitch.
1.4.0
- Major code refactoring + IRC integration. Thanks to anxdpanic
1.3.3
- added French language
1.3.1
- fixed bug: addon would not play non-transcoded streams if requested quality was lower than source
1.3.0
- added ability to play new type twitch VODs + major code refactoring/optimisation and bug fixes (now utilising python-twitch [0.3.8] by ingwinlu). - ingwinlu
1.2.0
- fixed bug: removed error in code which prevented falling back to best available quality when preferred quality was not available
1.1.9
- fixed bug: past broadcasts were starting at second playlist item
1.1.8
- fixed unplayable streams issue due to Twich updates and various UI and error handling improvements, thx spiffomatic64, ntfwc, ingwinlu
1.1.7
- various UI and code optimisations + updated translations Thanks to ingwinlu, grocal, kokarn
1.1.6
- added Spanish language - thx G4RL1N
1.1.5