@@ -1,5 +1,6 @@
 2.0.0
 *** v1 favorites, routes will NOT work. NOT backwards compatible with v1
+*** New OAuth token required, see Settings - Get OAuth token
 - revisit, refactor and rewrite v1 code where necessary
 - remove xbmcswift dependency
 - remove api portion in favor of new module script.module.python.twitch (based on python-twitch by ingwinlu)
@@ -13,6 +14,9 @@
 - uniform pagination where possible, 'items per page' can be changed in settings
 - remove Teams, end-points no longer available
 - Kodi 17 ready, content/media types set per new official repository requirements
+- add Communities
+- add Follow/Unfollow
+
 1.4.4
 - HTTPS fix for Linux users + Kodi Offical repository compatibility fixes.
 1.4.3
